# jbpf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SUPPORT.md  VERSION  azure-pipelines.yml  cgmanifest.json  init_and_patch_submodules.sh  setup_jbpf_env.sh  symver.map
docs/: add_new_hook.md  (+12 more)
examples/: .gitignore  CMakeLists.txt  Makefile
examples/experimental/first_example_standalone_json_udp/: .gitignore  Makefile  README.md  codeletset_load_request.yaml  example_app.cpp  example_codelet.c  json_udp_receiver  json_udp_receiver.cpp  load.sh  serde_io_lib_example.cpp
examples/first_example_ipc/: .gitignore  Makefile  README.md  codeletset_load_request.yaml  common.h  example_app.cpp  example_collect_control.cpp
examples/first_example_standalone/: Makefile  README.md  codeletset_load_request.yaml  example_app.cpp  unload.sh
examples/reverse_proxy/: CMakeLists.txt  README.md  listener.cpp  listener.hpp  load.sh  main.cpp  parser.cpp  parser.hpp  run_proxy.sh  unload.sh
jbpf_tests/: CMakeLists.txt  README.md
jbpf_tests/common/: jbpf_agent_common.c  jbpf_agent_common.h  jbpf_test_def.h  jbpf_test_lib.c  jbpf_test_lib.h  jbpf_verifier_extension_defs.h
jbpf_tests/concurrency/: CMakeLists.txt
jbpf_tests/concurrency/atomic/: CMakeLists.txt  atomic_concurrency_test.c
jbpf_tests/concurrency/channel/: CMakeLists.txt  channel_test.c
jbpf_tests/concurrency/control_input/: CMakeLists.txt  codelet_control_input_concurrency_atomic_test.c  codelet_control_input_concurrency_test.c
jbpf_tests/concurrency/hashmap/: CMakeLists.txt  codelet_hashmap_concurrency_read_test.c  codelet_large_hashmap_test.c  codelet_per_hashmap_array_concurrency_test.c
jbpf_tests/concurrency/hooks/: CMakeLists.txt  concurrent_hook_execution_unload_test.c
jbpf_tests/concurrency/mem/: CMakeLists.txt  mem_consumer.c  mem_jbpf_io_channel_share_data_ptr_tests.c  mem_stress.c  mem_threading.c
jbpf_tests/concurrency/ringbuf/: CMakeLists.txt  codelet_ringbuf_concurrency_test.c
jbpf_tests/e2e_examples/: CMakeLists.txt  jbpf_e2e_ipc_test.c  jbpf_e2e_lcm_ipc_standalone_test.c  jbpf_e2e_standalone_test.c
jbpf_tests/functional/: CMakeLists.txt  jbpf_agent.cpp  jbpf_unit_test.c
jbpf_tests/functional/array/: CMakeLists.txt  array_access_test.c
jbpf_tests/functional/codeletSets/: CMakeLists.txt  codeletSet_LinkedMaps_cyclicCodelets.c  codeletSet_loadTwice.c  codeletSet_multiple_withSameHook.c  codeletSet_priority.c  codeletSet_unload_Unknown.c
jbpf_tests/functional/codelets/: CMakeLists.txt  codelet_InChannel_flood.c  codelet_OutChannel_flood.c  codelet_hook_max.c  codelet_hook_sameSuffix.c  codelet_multiThread_perThreadArray.c
jbpf_tests/functional/ctrl_hooks/: CMakeLists.txt  ctrlHook_checkReturns.c  ctrlHook_multipleCodeletSets.c  ctrlHook_multipleCodelets.c
jbpf_tests/functional/helper_functions/: CMakeLists.txt  jbpf_fixpoint_codelet_test.c  jbpf_hash_codelet_test.c  replacing_time_event_helper_function_test.c
jbpf_tests/functional/io/: CMakeLists.txt  jbpf_io_channel_share_data_ptr_tests.c  jbpf_io_ipc_test.c  jbpf_io_local_test.c
jbpf_tests/functional/load_unload/: CMakeLists.txt  graceful_stop.c  load_unload_repeated.c  max_loaded_codeletSets.c  max_loaded_codeletSets_exceeded.c  max_loaded_codelets.c  max_loaded_codelets_exceeded.c
jbpf_tests/functional/perf/: CMakeLists.txt  jbpf_perf_time.c
jbpf_tests/functional/report_stats/: CMakeLists.txt  report_stats_hook_test.c
jbpf_tests/functional/request_validation/: CMakeLists.txt  codeletSet_CodeletDescriptors_empty.c  codeletSet_CodeletDescriptors_max.c  codeletSet_CodeletDescriptors_maxExceeded.c  codeletSet_CodeletDescriptors_null.c  codeletSet_Id_maxLen.c  codeletSet_Id_notSet.c  codeletSet_Id_tooLong.c  codeletSet_duplicateCodeletNames.c  codeletSet_duplicateStreamIds.c  codelet_InChannel_Name_maxLen.c  codelet_InChannel_Name_notSet.c  codelet_InChannel_Name_tooLong.c  codelet_InChannel_Serde_maxLen.c  codelet_InChannel_Serde_notSet.c  codelet_InChannel_Serde_tooLong.c  codelet_InChannel_Serde_unknown.c  codelet_InChannel_map_unknown.c  (+42 more)
jbpf_tests/stress_tests/: CMakeLists.txt
jbpf_tests/unit_tests/: CMakeLists.txt
jbpf_tests/verifier/: CMakeLists.txt  jbpf_basic_verifier_test.cpp  jbpf_verifier_extension_test.cpp
src/core/: CMakeLists.txt  jbpf.c  jbpf.h  jbpf_agent_hooks.h  jbpf_bitmap.h  jbpf_bpf_array.c  jbpf_bpf_array.h  jbpf_bpf_hashmap.c  jbpf_bpf_hashmap.h  jbpf_bpf_hashmap_int.h  jbpf_bpf_spsc_hashmap.c  jbpf_bpf_spsc_hashmap.h  jbpf_bpf_spsc_hashmap_int.h  jbpf_config.h  jbpf_device_defs.h  jbpf_fixpoint_utils.h  jbpf_helper.h  jbpf_helper_api_defs.h  jbpf_helper_impl.c  jbpf_helper_impl.h  jbpf_helper_utils.h  jbpf_hook.c  jbpf_hook.h  jbpf_hook_defs.h  jbpf_int.h  jbpf_lookup3.c  jbpf_lookup3.h  jbpf_memory.c  jbpf_memory.h  jbpf_perf.c  jbpf_perf.h  jbpf_perf_ext.h  jbpf_types.h  jbpf_utils.c  jbpf_utils.h
src/emulator/: CMakeLists.txt  CMakeLists_emulator.txt  README.md  autogen-hook-wrappers.py  emulator.cpp  emulator_utils.py  helper_functions.hpp  hook_wrapper.h  hooks.h  patch.py
src/io/: CMakeLists.txt  jbpf_io.c  jbpf_io.h  jbpf_io_channel.c  jbpf_io_channel.h  jbpf_io_channel_defs.h  jbpf_io_channel_int.h  jbpf_io_defs.h  jbpf_io_hash.h  jbpf_io_int.h  jbpf_io_ipc.c  jbpf_io_ipc.h  jbpf_io_ipc_int.h  jbpf_io_ipc_msg.h  jbpf_io_local.c  jbpf_io_local.h  jbpf_io_queue.c  jbpf_io_queue.h  jbpf_io_queue_int.h  jbpf_io_thread_mgmt.c  jbpf_io_thread_mgmt.h  jbpf_io_utils.c  jbpf_io_utils.h
src/lcm/: CMakeLists.txt  jbpf_lcm_api.h  jbpf_lcm_ipc.c  jbpf_lcm_ipc.h  jbpf_lcm_ipc_msg.h
src/logger/: CMakeLists.txt  jbpf_logging.c  jbpf_logging.h
src/mem_mgmt/: CMakeLists.txt  jbpf_mem_mgmt.c  jbpf_mem_mgmt.h  jbpf_mem_mgmt_int.h  jbpf_mem_mgmt_utils.h  jbpf_mempool.c  jbpf_mempool.h  jbpf_mempool_int.h
src/verifier/: CMakeLists.txt  jbpf_platform.cpp  jbpf_platform.hpp  jbpf_verifier.cpp  jbpf_verifier.hpp  jbpf_verifier_cli.cpp
tools/lcm_cli/: CMakeLists.txt  loader.cpp  loader.hpp  main.cpp  parser.cpp  parser.hpp  stream_id.cpp  stream_id.hpp
(+144 files in other folders)
