cmake_minimum_required(VERSION 3.16)

include(ExternalProject)
project(jbpf-tests-verifier)
include(CTest)
set(JBPF_TESTS ${JBPF_TESTS} PARENT_SCOPE)

set(TESTS_VERIFIER ${TESTS_BASE}/verifier)
set(JBPF_BASIC_VERIFIER_TEST jbpf_basic_verifier_test)
set(JBPF_BASIC_VERIFIER_TEST_SOURCES ${TESTS_VERIFIER}/jbpf_basic_verifier_test.cpp)
set(JBPF_VERIFIER_EXTENSION_TEST jbpf_verifier_extension_test)
set(JBPF_VERIFIER_EXTENSION_TEST_SOURCES ${TESTS_VERIFIER}/jbpf_verifier_extension_test.cpp)

add_executable(${JBPF_BASIC_VERIFIER_TEST} ${JBPF_BASIC_VERIFIER_TEST_SOURCES})
target_link_libraries(${JBPF_BASIC_VERIFIER_TEST} PUBLIC jbpf::verifier_lib)
target_include_directories(${JBPF_BASIC_VERIFIER_TEST} PUBLIC ${JBPF_VERIFIER_HEADERS} ${TEST_HEADER_FILES})
add_test(NAME ${JBPF_BASIC_VERIFIER_TEST} COMMAND ${JBPF_BASIC_VERIFIER_TEST})
list(APPEND JBPF_TESTS ${JBPF_BASIC_VERIFIER_TEST})
add_clang_format_check(${JBPF_BASIC_VERIFIER_TEST} ${JBPF_BASIC_VERIFIER_TEST_SOURCES})
add_cppcheck(${JBPF_BASIC_VERIFIER_TEST} ${JBPF_BASIC_VERIFIER_TEST_SOURCES})

add_executable(${JBPF_VERIFIER_EXTENSION_TEST} ${JBPF_VERIFIER_EXTENSION_TEST_SOURCES})
target_link_libraries(${JBPF_VERIFIER_EXTENSION_TEST} PUBLIC jbpf::verifier_lib)
target_include_directories(${JBPF_VERIFIER_EXTENSION_TEST} PUBLIC ${JBPF_VERIFIER_HEADERS} ${TEST_HEADER_FILES})
add_test(NAME ${JBPF_VERIFIER_EXTENSION_TEST} COMMAND ${JBPF_VERIFIER_EXTENSION_TEST})
list(APPEND JBPF_TESTS ${JBPF_VERIFIER_EXTENSION_TEST})
add_clang_format_check(${JBPF_VERIFIER_EXTENSION_TEST} ${JBPF_VERIFIER_EXTENSION_TEST_SOURCES})
add_cppcheck(${JBPF_VERIFIER_EXTENSION_TEST} ${JBPF_VERIFIER_EXTENSION_TEST_SOURCES})

set(JBPF_TESTS ${JBPF_TESTS} PARENT_SCOPE)
